# RCIK

./: README.md
rcik_learning/script/: convert_to_cpp.py  data_loader.py  loss.py  model.py  sampler.py  train.py
rcik_plan/: CMakeLists.txt  README.md  package.xml
rcik_plan/include/rcik_plan/: rcik_parameters.h  rcik_planning.h  rcik_problem.h
rcik_plan/launch/: fetch_keyboard.launch  fetch_keyboard.yaml
rcik_plan/src/: rcik_keyboard.cpp  rcik_parameters.cpp  rcik_planning.cpp  rcik_problem.cpp
rcik_plan/src/data/occ/: self_occ_fetch_7dof.npy  table_fetch_7dof.npy
