<package format="2">
  <name>rcik_plan</name>
  <description>rcik_plan</description>

  <version>0.0.1</version>
  <author email="mincheul.kang@kaist.ac.kr">Mincheul Kang</author>
  <maintainer email="mincheul.kang@kaist.ac.kr">Mincheul Kang</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>torm</build_depend>
</package>
